adjust ts color palette

--- a/index.html
+++ b/index.html
@@ -304,12 +304,12 @@
 
     <div class='row'>
 
-        <div class='col' id='vis-2-title'>
-            <h3 class='vis-title title fader3'>A Brief Musical History </h3>
+        <div class='col-6' id='vis-2-title' style="height: 100%; white-space: nowrap" >
+            <h4 class='vis-title title fader3' >Billboard Hot 100: A Brief Musical History
+            </h4>
         </div>
 
-        <div class="col-8">
-            <div class="row justify-content-center" style="height: 100%">
+        <div class="col-4 justify-content-center" style="height: 100%; width:100%">
                 <select id='vis-2-selector' class="custom-select align-self-center" style="width: 50%"
                         onchange="categoryChange()">
                     <option value="Dolly Parton" selected>Dolly Parton</option>
@@ -318,16 +318,15 @@
                     <option value="Madonna">Madonna</option>
                     <option value="Taylor Swift">Taylor Swift</option>
                 </select>
-            </div>
         </div>
 
-        <div class='col' id='vis-2-legend' style="height: 5vh; padding:0">
+        <div class='col-2' id='vis-2-legend' style="height: 7vh; padding:0px">
             <!-- Outsource timeline legend here -->
         </div>
 
     </div>
 
-    <div class='row' id='vis-2' style="height: 70vh; width:100%;">
+    <div class='row' id='vis-2' style="height: 60vh; width:100%;">
         <!-- Row with the timeline vis -->
     </div>
     <div class='row'>
