Fixing styling issues

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             </div>
         </div>
         <div class='row'>
-            <div class='col fader6'>
+            <div class='col fader4'>
                 <div class="row">
                     <div class='col' id='vis-1c-title'>
                         <h3 class='vis-title title'></h3>
@@ -223,7 +223,7 @@
                     </div>
                 </div>
 
-                <div class="row fader6">
+                <div class="row fader3">
                     <div class='col-4' id='vis-radial-1960s'></div>
                     <div class='col-4' id='vis-radial-1970s'></div>
                     <div class='col-4' id='vis-radial-1980s'></div>
@@ -231,7 +231,7 @@
 
                 <div class='horizontal-line'></div>
 
-                <div class='row fader8'>
+                <div class='row fader3'>
                     <div class='col-4' id='vis-radial-1990s'></div>
                     <div class='col-4' id='vis-radial-2000s'></div>
                     <div class='col-4' id='vis-radial-2010s'></div>
@@ -349,12 +349,12 @@
 
 
 <a id="recognition"></a>
-<div class='container-fluid module' id='module-3'>
+<div class='container-fluid' id='module-3'>
     <div class='row'>
         <!-- Awards vis -->
         <div class='col-8' style="height: 80vh; width: 100%; position: sticky; top: 0">
-            <div class='row' id='vis-3-title'>
-                <h3 class='vis-title title fader3'>Recognition of Impact: Music, Acting, Composition, Achievements, and
+            <div class='row' id= "vis-3-title">
+                <h3 class='title fader3'>Music, Acting, Composition, Achievements, and
                     Service</h3>
             </div>
 
