add timeline intro

--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
                 <p class='fader6'> Dolly's influence is not contained to country music. Over her career, she
                     collaborated with an impressive 434 artists. We show her collaborations over six decades.
                 </p>
+
             </div>
 
         </div>
@@ -297,20 +298,56 @@
 
 <div class='gutter'></div>
 <div class='gutter'></div>
+<div class='container-fluid module timeline_intro justify-content-center'>
+    <div class='row'>
+
+        <div class='col-12'>
+            <p class='fader6'> Dolly's songs have had an enormous success even outside the country gender.
+            </p>
+        </div>
+
+    </div>
+</div>
+
+<div class='container-fluid module timeline_intro justify-content-center'>
+    <div class='row'>
+
+        <div class='col-12'>
+            <p class='fader6'>
+                20 of her songs have made it to the Billboard Hot 100 ranking.
+                <br>
+            </p>
+        </div>
+
+    </div>
+</div>
+
+<div class='container-fluid module timeline_intro justify-content-center'>
+    <div class='row'>
+
+        <div class='col-12'>
+            <p class='fader6'>
+                9 to 5 was her most popular song, hitting number 1 for two weeks in a row in the 80's.
+            </p>
+        </div>
+
+    </div>
+</div>
 
 <!-- Title and external legend side by side, plot underneath that, slider underneath the timeline -->
 <a id="musicalhistory"></a>
 <div class='container-fluid module fader4' id='module-2'>
-
-    <div class='row'>
-
-        <div class='col-6' id='vis-2-title' style="height: 100%; white-space: nowrap" >
+    <div class="row">
+        <div class='col-12' id='vis-2-title' style="height: 100%; white-space: nowrap; padding:2vh" >
             <h4 class='vis-title title fader3' >Billboard Hot 100: A Brief Musical History
             </h4>
         </div>
+    </div>
 
-        <div class="col-4 justify-content-center" style="height: 100%; width:100%">
-                <select id='vis-2-selector' class="custom-select align-self-center" style="width: 50%"
+    <div class='row'>
+
+        <div class="col-8 justify-content-center" style="height: 100%; width:100% ; padding:3vh">
+                <select id='vis-2-selector' class="custom-select align-self-center text-center" style="width: 50%"
                         onchange="categoryChange()">
                     <option value="Dolly Parton" selected>Dolly Parton</option>
                     <option value="Elvis Presley">Elvis Presley</option>
@@ -320,7 +357,7 @@
                 </select>
         </div>
 
-        <div class='col-2' id='vis-2-legend' style="height: 7vh; padding:0px">
+        <div class='col-2' id='vis-2-legend' style="height: 7vh;">
             <!-- Outsource timeline legend here -->
         </div>
 
