Taking out penatonix para to fit graph

--- a/index.html
+++ b/index.html
@@ -483,15 +483,15 @@
                 <div class='gutter'></div>
 
                 <h4 class='title fader3'>
-                    Famous title <em>Jolene</em> recorded in 1973 won the <em>Best Country Duo / Group
-                    Performance</em> Grammy with <em>Pentatonix</em> in 2017.
-                    <br><br>
                     The popularity of "Jolene" as a baby name spiked with the release of this recording.
-                    <br>
-                    <img src="img/Jolene.png" style= "width:75%" class="fader2" alt="..."/>
                 </h4>
+
+                <div class = "big-gutter"></div>
+
+                <img src="img/Jolene.png" style= "width:75%" class="fader2" alt="..."/>
             </div>
             <div style="height: 80vh" id="selectorMusic" class="fader3">
+                <div class ='gutter'></div>
                 <h4 class='title'><em>1 Million Streams</em>: Yellow Roses</h4>
                 <h4 class='title'><em>1 Million Streams</em>: The Seeker</h4>
                 <h4 class='title'><em>1 Million Streams</em>: Coat of Many Colors </h4>
