Fix final dolly image

--- a/index.html
+++ b/index.html
@@ -691,12 +691,8 @@
 
 </div>
 
-<div class='gutter'></div>
 
-
-<div class='big-gutter'></div>
-
-<!--<div class='container-fluid quote-mod' id='outsource2'>-->
+<div class='container-fluid quote-mod' id='outsource2'>
     <div class='row'>
         <div class='col-4'>
             <img src="img/dolly_bw_closing.jpg" width=600>
