--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 <a id="musicalhistory"></a>
 <div class='container-fluid module fader4' id='module-2'>
     <div class="row">
-        <div class='col-12' id='vis-2-title' style="height: 100%; white-space: nowrap; padding:2vh" >
+        <div class='col-12' id='vis-2-title' style="height: 100%; white-space: nowrap; padding: 1.5%" >
             <h1 class='vis-title title fader3' >Billboard Hot 100: A Brief Musical History
             </h1>
         </div>
