Fixing project team centering

--- a/index.html
+++ b/index.html
@@ -254,14 +254,10 @@
     <div class='gutter'></div>
     <div class='gutter'></div>
 
-<!--
-    <div class='container-fluid quote-mod' id='outsource0'>
-        text break
-    </div>
--->
 
 
 </div>
+
 <div class='container-fluid fader3' id='spotifystats'>
     <!-- Quote or text break -->
     <div class='row'>
@@ -296,8 +292,6 @@
     </div>
 </div>
 
-<div class='gutter'></div>
-<div class='gutter'></div>
 <div class='container-fluid module timeline_intro justify-content-center'>
     <div class='row'>
 
@@ -738,8 +732,8 @@
     <div class='row justify-content-center'>
         <h3 class="dark-title">Project Team</h3>
     </div>
-    <div class="row ">
-        <div class='col justify-content-center'>
+    <div class="row justify-content-between" id = "cardcontainer">
+        <div class='col-4'>
             <div class="card" style="width: 25rem;">
                 <div class="card-body">
                     <h5 class="card-title">Isidora Diaz</h5>
@@ -750,8 +744,7 @@
                 </div>
             </div>
         </div>
-
-        <div class="col">
+        <div class="col-4">
             <div class="card" style="width: 25rem;">
                 <div class="card-body">
                     <h5 class="card-title">Hope Neveux</h5>
@@ -763,8 +756,7 @@
                 </div>
             </div>
         </div>
-
-        <div class="col">
+        <div class="col-4">
             <div class="card" style="width: 25rem;">
                 <div class="card-body">
                     <h5 class="card-title">Loralee Ryan</h5>
