Moving blocks around, color changes, awards padding

--- a/index.html
+++ b/index.html
@@ -258,45 +258,11 @@
 
 </div>
 
-<div class='container-fluid fader3' id='spotifystats'>
-    <!-- Quote or text break -->
-    <div class='row'>
-        <div class='col' id='metric1'>
-            <div class='row' id='leadrecord'></div>
-            <div class='row' id='leadstreams'></div>
-            <div class='row'>
-                <h2 class='title'>Total Streams</h2>
-            </div>
-        </div>
-        <div class='col' id='metric2'>
-            <div class='row' id='featsrecord'></div>
-            <div class='row' id='feats'></div>
-            <div class='row'>
-                <h2 class='title'>Features</h2>
-            </div>
-        </div>
-        <div class='col' id='metric3'>
-            <div class='row' id='tracksrecord'></div>
-            <div class='row' id='tracks'></div>
-            <div class='row'>
-                <h2 class='title'>Tracks</h2>
-            </div>
-        </div>
-        <div class='col' id='metric4'>
-            <div class='row' id='onemillrecord'></div>
-            <div class='row' id='onemill'></div>
-            <div class='row'>
-                <h2 class='title'>One Million Streams</h2>
-            </div>
-        </div>
-    </div>
-</div>
-
 <div class='container-fluid module timeline_intro justify-content-center'>
     <div class='row'>
 
         <div class='col-12'>
-            <p class='fader6'> Dolly's songs have had an enormous success even outside the country gender.
+            <p class='fader6'> Dolly's songs have had an enormous success even outside the country genre.
             </p>
         </div>
 
@@ -372,15 +338,59 @@
         <p></p>
     </div>
 
+    <div class = 'gutter'></div>
+
+</div>
+
+<div class='container-fluid module timeawardsmerge justify-content-center'>
+    <div class='row'>
+
+        <div class='col-12'>
+            <p class='fader6'> Dolly has produced music since the 1960's, resulting in nearly a thousand 
+                songs. Spotify was founded in 2006, providing a platform to share her artistry and gain global recognition.          </p>
+        </div>
+
+    </div>
 </div>
 
 
-<div class='gutter'></div>
-<div class='gutter'></div>
+<div class='container-fluid fader3' id='spotifystats'>
+    <div class='row'>
+        <div class='col' id='metric1'>
+            <div class='row' id='leadrecord'></div>
+            <div class='row' id='leadstreams'></div>
+            <div class='row'>
+                <h2 class='title'>Total Streams</h2>
+            </div>
+        </div>
+        <div class='col' id='metric2'>
+            <div class='row' id='featsrecord'></div>
+            <div class='row' id='feats'></div>
+            <div class='row'>
+                <h2 class='title'>Features</h2>
+            </div>
+        </div>
+        <div class='col' id='metric3'>
+            <div class='row' id='tracksrecord'></div>
+            <div class='row' id='tracks'></div>
+            <div class='row'>
+                <h2 class='title'>Tracks</h2>
+            </div>
+        </div>
+        <div class='col' id='metric4'>
+            <div class='row' id='onemillrecord'></div>
+            <div class='row' id='onemill'></div>
+            <div class='row'>
+                <h2 class='title'>One Million Streams</h2>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 <a id="recognition"></a>
 <div class='container-fluid' id='module-3'>
+    <div class = 'gutter'></div>
     <div class='row'>
         <!-- Awards vis -->
         <div class='col-8' style="height: 80vh; width: 100%; position: sticky; top: 0">
