Closing para, gutter below dendros

--- a/index.html
+++ b/index.html
@@ -238,24 +238,11 @@
                     <div class='col-4' id='vis-radial-2010s'></div>
                 </div>
 
-                <div class="row">
-                    <div class="col bubble-vis" id='vis-radial2-sup'>
-
-                    </div>
-                    <div class='col bubble-vis' id='vis-radial2'>
-
-                    </div>
-                </div>
+                <div class='gutter'></div>
+                
             </div>
         </div>
     </div>
-
-
-    <div class='gutter'></div>
-    <div class='gutter'></div>
-
-
-
 </div>
 
 <div class='container-fluid module timeline_intro justify-content-center'>
@@ -697,12 +684,19 @@
 
 
 <div class='container-fluid quote-mod' id='outsource2'>
-    <div class='row'>
+    <div class='row justify-content-between'>
         <div class='col-4'>
             <img src="img/dolly_bw_closing.jpg" width=600>
         </div>
-        <div class='col-8'>
-
+        <div class='col-6'>
+            <h3 class = 'title fader3'>For decades, Dolly Parton has shown resilience, elegance in the face of adversity,
+                and a strong commitment to making the lives of people better. She asks for nothing in return, and 
+                practice humanitarianism even when cameras are not rolling.
+            </h3>
+            <div class = 'gutter'></div>
+            <h3 class = 'title fader3'>
+                As a woman of many talents, she is an inspiration to music, performance, and humanity.
+            </h3>
         </div>
     </div>
 </div>
