--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
 </div>
 
 
-<div class='container-fluid' id='footer'>
+<div class='container-fluid module' id='footer'>
     <div class='gutter'></div>
 
     <!-- Sources list -->
