--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
     <div class='row'>
         <!-- Right of the vis -->
         <div class='col-4'>
-            <dvi class=row style="position: sticky; top: 0; background-color: black">
+            <div class=row style="position: sticky; top: 0; background-color: black">
                 <div class="col">
                     <h1 class='title numeric' id='won-numeric'></h1>
                     <h4 class='title'><em>Won</em></h4>
@@ -391,27 +391,27 @@
                     <h1 class='title numeric' id='nominated-numeric'></h1>
                     <h4 class='title'><em>Nominated</em></h4>
                 </div>
-            </dvi>
+            </div>
 
             <div class='big-gutter'></div>
 
 
             <div style="height: 80vh" id="selectorAll">
                 <!-- All -->
-                <h4 class='title fader2'>
+                <h4 class='title '>
                     Of the 413 awards she has been at least nominated for, she holds Guinness World Records,
                     million-plus streaming awards, countless Country Music Awards, and teaching recognition.
                 </h4>
 
                 <div class='gutter'></div>
 
-                <h4 class='title fader2'>
+                <h4 class='title '>
                     She has been nominated for a Grammy 55 times to date.
                 </h4>
 
                 <div class='gutter'></div>
 
-                <h4 class='title fader2'>
+                <h4 class='title '>
                     She has received awards notably from the <em>Carnegie Corporation of New York</em>, <em>United
                     States Fish and Wildlife Service</em>, <em>Daughters of the American Revolution</em>,
                     <em>Woodrow Wilson International Center for Scholars of the Smithsonian Institution</em>, <em>United
@@ -422,27 +422,27 @@
             </div>
             <div style="height: 80vh" id="selectorWon">
                 <!-- Won -->
-                <h4 class='title fader3'>
+                <h4 class='title '>
                     She has been induced into the Grammy Hall of Fame multiple times, the Rock and Roll Hall of
                     Fame, and the Library of Congress's National Recording Registry.
                 </h4>
 
                 <div class='gutter'></div>
 
-                <h4 class='title fader3'>
+                <h4 class='title '>
                     In 1985 <em>Drinkin'stein</em> won the <em>Worst Original Song Award</em>.
                 </h4>
 
                 <div class='gutter'></div>
 
-                <h4 class='title fader3'>Dolly has rejected the <em>Presidential Medal of Freedom</em> twice. Another
+                <h4 class='title '>Dolly has rejected the <em>Presidential Medal of Freedom</em> twice. Another
                     former president was shocked upon hearing
                     the news, assuming she had received one already.
                 </h4>
             </div>
             <div style="height: 80vh" id="selectorNominated">
                 <!-- Nominated -->
-                <h4 class='title fader3'>
+                <h4 class='title '>
                     In 1985 <em>Sweet Lovin' Friends</em> and <em>Rhinestone</em> were nominated for <em>Worst
                     Original Song</em> and <em>Worst Musical Score</em>.
                 </h4>
@@ -450,22 +450,22 @@
             </div>
             <div style="height: 80vh" id="selectorMusicPerformance">
                 <!-- Musical Performance -->
-                <h4 class='title fader3'>
+                <h4 class='title '>
                     Her long-time musical partner <em>Porter Wagoner</em> has been at least nominated with her as a
                     duo 34 times.
                 </h4>
 
                 <div class='gutter'></div>
 
-                <h4 class='title fader3'>
+                <h4 class='title '>
                     The popularity of "Jolene" as a baby name spiked with the release of this recording.
                 </h4>
 
                 <div class = "big-gutter"></div>
 
-                <img src="img/Jolene.png" style= "width:75%" class="fader2" alt="..."/>
+                <img src="img/Jolene.png" style= "width:75%" class="" alt="..."/>
             </div>
-            <div style="height: 80vh" id="selectorMusic" class="fader3">
+            <div style="height: 80vh" id="selectorMusic" class="">
                 <div class ='gutter'></div>
                 <h4 class='title'><em>1 Million Streams</em>: Yellow Roses</h4>
                 <h4 class='title'><em>1 Million Streams</em>: The Seeker</h4>
@@ -476,37 +476,37 @@
             </div>
             <div style="height: 80vh" id="selectorPhilanthropy">
                 <!-- Philanthropy and Achievement -->
-                <h4 class='title fader3'>
+                <h4 class='title '>
                     She holds an <em>Honorary Doctorate of Letters</em> from Newman College and an <em> Honorary
                     Doctorate of Musical Letters</em> from the University of Tennessee
                 </h4>
 
                 <div class='gutter'></div>
 
-                <h4 class='title fader3'>
+                <h4 class='title '>
                     The <em>Library of Congress</em> has given her the title of Living Legend
                 </h4>
 
                 <div class='gutter'></div>
 
-                <h4 class='title fader3'><em>Coat of Many Colors (1971 recording)</em> has been inducted into the National
+                <h4 class='title '><em>Coat of Many Colors (1971 recording)</em> has been inducted into the National
                     Recording Registry</h4>
 
                 <div class='gutter'></div>
 
-                <h4 class='title fader3'> She is recognized by multiple teaching organizations for her commitment to
+                <h4 class='title '> She is recognized by multiple teaching organizations for her commitment to
                     providing access to education</h4>
             </div>
             <div style="height: 80vh" id="selectorMediaPerformance">
                 <!-- Media Performance -->
-                <h4 class='title fader3'>
+                <h4 class='title '>
                     Her hit song <em>9 to 5</em> was made for the 1980 film <em>9 to 5</em>, where she played
                     Doralee Rhodes.
                 </h4>
 
                 <div class='gutter'></div>
 
-                <h4 class='title fader3'>
+                <h4 class='title '>
                     She was nominated for 2 Golden Globes in 1981 and 1 Golden Globe in 1984 for <em>Best Motion
                     Picture Actress</em> and <em>New Star of the Year</em>.
                 </h4>
