tooltip styling and hover

--- a/index.html
+++ b/index.html
@@ -147,14 +147,14 @@
                 <div class="big-gutter"></div>
 
                 <div style="height: 50vh" id="bubble-first-text">
-                    <h4 class='title fader2'>Ranging from classic country legend <em>Johnny Cash</em> to pop country hit
+                    <p fader2'>Ranging from classic country legend <em>Johnny Cash</em> to pop country hit
                         <em>Luke Bryan</em>, country
                         music casts a wide net. Still, it's sound is unique to the United States. A bubble that doesn't
                         stand out in the presence of
-                        <em>Taylor Swift</em> and <em>Elvis Presley</em> is renowned artist <em> Dolly Parton</em>.</h4>
+                        <em>Taylor Swift</em> and <em>Elvis Presley</em> is renowned artist <em> Dolly Parton</em>.</p>
                 </div>
                 <div style="height: 60vh" id="bubble-second-text">
-                    <h4 class='title fader2'>Despite her comparatively small impact on the Billboards, she is famous for
+                    <p fader2'>Despite her comparatively small impact on the Billboards, she is famous for
                         more than her solo music career.
                         Out of these major players on the Billboards, she has collaborated with 14 of them. Taylor Swift
                         has
@@ -162,7 +162,7 @@
                         be higher, as many people wanted to record
                         the infamous song eventually performed by <em>Whitney Huston</em>, <em>I Will Always Love
                             You</em>. <em>Elvis Presley</em> was one of them.
-                    </h4>
+                    </p>
                 </div>
             </div>
 
@@ -597,7 +597,7 @@
             </div>
         </div>
     </div> <!-- Quote or text break -->
-</div>
+
 
 <div class='container-fluid module' id='ten_intro'>
     <div class='row'>
