--- a/index.html
+++ b/index.html
@@ -328,7 +328,8 @@
 
         <div class="col-12">
             <p class="fader6"> Dolly has produced music since the 1960's, resulting in nearly a thousand 
-                songs. Spotify was founded in 2006, providing a platform to share her artistry and gain global recognition.          </p>
+                songs. Spotify was founded in 2006, providing a platform to share her artistry and gain global recognition.
+            Below are some of her statistics.</p>
         </div>
 
     </div>
@@ -366,6 +367,26 @@
             </div>
         </div>
     </div>
+</div>
+
+<div class="container-fluid module" id="awards_intro">
+    <div class="row">
+
+        <div class="col-8">
+            <p class="fader4">Dolly is cited as the most honored female country singer-songwriter of all time.
+                She has even rejected the Presidential Medal of Freedom.
+                <br><br>
+            </p>
+            <p class="fader8">Twice.
+            </p>
+
+        </div>
+        <div class="col-4">
+            <img class = "fader4" src="img/grammy.webp" class="fader2" alt="...">
+            <p class = "fader3" style = font-size: medium;> <br> Dolly at her 50th Grammy nomination</p>
+        </div>
+    </div>
+
 </div>
 
 
@@ -444,12 +465,6 @@
                     In 1985 <em>Drinkin'stein</em> won the <em>Worst Original Song Award</em>.
                 </h4>
 
-                <div class="gutter"></div>
-
-                <h4 class="title ">Dolly has rejected the <em>Presidential Medal of Freedom</em> twice. Another
-                    former president was shocked upon hearing
-                    the news, assuming she had received one already.
-                </h4>
             </div>
             <div style="height: 80vh" id="selectorNominated">
                 <!-- Nominated -->
