correct row/column nesting for imagination library vis

--- a/index.html
+++ b/index.html
@@ -561,57 +561,43 @@
         </div>
     </div>
 </div>
-<div class="row fader4">
-    <img src="img/bw_cropped_news_s3.jpg" width="99%">
-</div>
-<!--<div class="container-fluid quote-mod" id="outsource1"> -->
 
-    <a id="imaginationlibrary"></a>
-    <div class="container-fluid module" id="module-4">
+<img src="img/bw_cropped_news_s3.jpg" width="100%">
 
-        <div class="col-12">
-            <div class="row">
-                <div class="col" id="vis-1f-title">
-                    <h1 class="vis-1f-title fader4">Imagination Library </h1>
-                </div>
-            </div>
+<a id="imaginationlibrary"></a>
+<div class="container-fluid module" id="module-4">
+    <div class="row">
+        <div class="col-12" id="vis-1f-title">
+            <h1 class="vis-1f-title fader4">Imagination Library </h1>
         </div>
-        <!-- Keeps everything together -->
-        <div class="row">
-            <div class="col-4">
-                <p class="library fader3">
-                    <br><br>
-                    Dolly's father was illiterate, as he was unable to attend school regularly
+    </div>
+
+    <!-- Keeps everything together -->
+    <div class="row">
+        <div class="col-4">
+            <p class="library fader3">
+                <br><br>
+                Dolly's father was illiterate, as he was unable to attend school regularly
                 as a child. He was deeply ashamed of this. She started the Imagination Library with him, and in honor of
                 him. The Imagination Library sends monthly free books to young children in hopes of fostering a love
                 of reading and a love of learning. Currently, 1 in 10 children in the United States are enrolled in the
                 Imagination Library program, and the program has gifted over 195 million books to date.
-                    <br><br></p>
-                <p class="library fader3">   We estimate the total cost of the program to be over $320 million.
-                    <br><br></p>
-
-                <p class="library fader3"> During the pandemic, she also hosted a virtual reading hour </p>
-
-
-                </p>
-            </div>
-
-            <div class="col-8" style="display: flex; flex-direction: column; height: 80vh">
-                <div class="row">
-                    <div class="col">
-                        <h3 class="vis-title title"></h3>
-                    </div>
-                </div>
-
-                <div class="row" style="flex: auto">
-                    <div class="col" style="height: 100%; width: 100%;">
-                        <div class="library-vis fader8" id="vis-5"></div>
-                    </div>
-                </div>
-            </div>
+                <br><br>
+            </p>
+            <p class="library fader3">
+                We estimate the total cost of the program to be over $320 million.
+                <br><br>
+            </p>
+            <p class="library fader3"> During the pandemic, she also hosted a virtual reading hour </p>
         </div>
-    </div> <!-- Quote or text break -->
 
+        <div class="col-8" style="display: flex; flex-direction: column; height: 80vh">
+            <div class="library-vis fader8" id="vis-5"></div>
+        </div>
+    </div>
+</div>
+
+<!-- Quote or text break -->
 
 <div class="container-fluid module" id="ten_intro">
     <div class="row">
