correct row/column nesting for spotifystats

--- a/index.html
+++ b/index.html
@@ -326,31 +326,39 @@
 <div class="container-fluid fader3" id="spotifystats">
     <div class="row">
         <div class="col-3" id="metric1">
-            <div class="row" id="leadrecord"></div>
-            <div class="row" id="leadstreams"></div>
+            <div class="row"><div class="col-12" id="leadrecord"></div></div>
+            <div class="row"><div class="col-12" id="leadstreams"></div></div>
             <div class="row">
+                <div class="col-12">
                 <h2 class="title">Total Streams</h2>
             </div>
         </div>
+        </div>
         <div class="col-3" id="metric2">
-            <div class="row" id="featsrecord"></div>
-            <div class="row" id="feats"></div>
+            <div class="row"><div class="col-12" id="featsrecord"></div></div>
+            <div class="row"><div class="col-12" id="feats"></div></div>
             <div class="row">
+                <div class="col-12">
                 <h2 class="title">Features</h2>
             </div>
         </div>
+        </div>
         <div class="col-3" id="metric3">
-            <div class="row" id="tracksrecord"></div>
-            <div class="row" id="tracks"></div>
+            <div class="row"><div class="col-12" id="tracksrecord"></div></div>
+            <div class="row"><div class="col-12" id="tracks"></div></div>
             <div class="row">
+                <div class="col-12">
                 <h2 class="title">Tracks</h2>
             </div>
         </div>
+        </div>
         <div class="col-3" id="metric4">
-            <div class="row" id="onemillrecord"></div>
-            <div class="row" id="onemill"></div>
+            <div class="row"><div class="col-12" id="onemillrecord"></div></div>
+            <div class="row"><div class="col-12" id="onemill"></div></div>
             <div class="row">
+                <div class="col-12">
                 <h2 class="title">One Million Streams</h2>
+                </div>
             </div>
         </div>
     </div>
