correct row/column nesting for collaborations vis

--- a/index.html
+++ b/index.html
@@ -173,59 +173,44 @@
 
 
 
-    <div class="container-fluid module" id="collab_intro">
-        <div class="row">
+<div class="container-fluid module" id="collab_intro">
+    <div class="row">
+        <div class="col-12">
+            <p class="fader6"> Dolly's influence is not contained to country music. Over her career, she
+                collaborated with an impressive 434 artists. We show her collaborations over six decades.
+            </p>
+        </div>
+    </div>
+</div>
 
-            <div class="col-12">
-                <p class="fader6"> Dolly's influence is not contained to country music. Over her career, she
-                    collaborated with an impressive 434 artists. We show her collaborations over six decades.
-                </p>
+<div class="container-fluid module" id="module-1a">
+    <a id="collaborations"></a>
 
-            </div>
-
+    <div class="row">
+        <!-- Anything relating to the (3RD STATIC BUBBLE) country bubble visualization would go in this row -->
+        <!-- Title for the country bubble visualization will be to the left of an external legend -->
+        <div class="col-12" id="vis-1c-title">
+            <h1 class="vis-title title fader4">Beyond the BillBoards</h1>
         </div>
     </div>
 
-    <div class="container-fluid module" id="module-1a">
+    <div class="row fader3">
+        <div class="col-4" id="vis-radial-1960s"></div>
+        <div class="col-4" id="vis-radial-1970s"></div>
+        <div class="col-4" id="vis-radial-1980s"></div>
+    </div>
 
+    <div class="horizontal-line"></div>
 
+    <div class="row fader3">
+        <div class="col-4" id="vis-radial-1990s"></div>
+        <div class="col-4" id="vis-radial-2000s"></div>
+        <div class="col-4" id="vis-radial-2010s"></div>
+    </div>
 
-
-        <!-- Anything relating to the (3RD STATIC BUBBLE) country bubble visualization would go in this row -->
-        <!-- Title for the country bubble visualization will be to the left of an external legend -->
-        <a id="collaborations"></a>
-        <div class="col-12">
-            <div class="row">
-                <div class="col" id="vis-1c-title">
-                    <h1 class="vis-title title fader4">Beyond the BillBoards</h1>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col fader4">
-                <div class="row">
-                    <div class="col" id="vis-1c-title">
-                        <h3 class="vis-title title"></h3>
-                    </div>
-                </div>
-
-                <div class="row fader3">
-                    <div class="col-4" id="vis-radial-1960s"></div>
-                    <div class="col-4" id="vis-radial-1970s"></div>
-                    <div class="col-4" id="vis-radial-1980s"></div>
-                </div>
-
-                <div class="horizontal-line"></div>
-
-                <div class="row fader3">
-                    <div class="col-4" id="vis-radial-1990s"></div>
-                    <div class="col-4" id="vis-radial-2000s"></div>
-                    <div class="col-4" id="vis-radial-2010s"></div>
-                </div>
-
-                <div class="gutter"></div>
-                
-            </div>
+    <div class="row">
+        <div class="row-12">
+            <div class="gutter"></div>
         </div>
     </div>
 </div>
