--- a/index.html
+++ b/index.html
@@ -112,75 +112,64 @@
     </div>
 </div>
 
-<div class="row">
-    <img src="img/bw_cropped_news_s11.jpg" class="fader6" width="99%">
+<img src="img/bw_cropped_news_s11.jpg" class="fader6" style="width:100%">
 
-    <div class="col-12">
-        <div class="row">
-            <div class="col" id="vis-1a-title">
-                <h1 class="vis-title title fader4">Billboard's Country Music Stars</h1>
-            </div>
+<div class="container-fluid module" id="module-1">
+    <div class="row">
+        <div class="col-12" id="vis-1a-title">
+            <h1 class="vis-title title fader4">Billboard's Country Music Stars</h1>
         </div>
     </div>
 
-    <div class="col-12">
-        <div class="row">
-            <div class="col" id="vis-1b-title">
-                <h5 class="vis-title title fader6">The top 30 country music singers to make the Billboard Hot
-                    100 list. Bubble size is represents a total score awarded to the artist's billboard presence,
-                    depending on number of songs, length of time on billboard, and highest ranking achieved.</h5>
-            </div>
+    <div class="row">
+        <div class="col-12" id="vis-1b-title">
+            <h5 class="vis-title title fader6">The top 30 country music singers to make the Billboard Hot
+            100 list. Bubble size is represents a total score awarded to the artist's billboard presence,
+            depending on number of songs, length of time on billboard, and highest ranking achieved.</h5>
         </div>
     </div>
-
-</div>
-
 
     <!-- CONTAINS ALL STATIC VERSIONS OF WHAT SHOULD BE TRANSITIONAL VISUALIZATIONS -->
     <a id="billboard"></a>
-    <div class="container-fluid module" id="module-1">
-        <!-- Anything relating to the (1ST STATIC VIEW) country bubble visualization would go in this row -->
-        <!-- Title for the country bubble visualization will be to the left of an external legend -->
-        <div class="row">
-            <div class="col-4">
-                <div class="big-gutter"></div>
 
-                <div style="height: 50vh" id="bubble-first-text">
-                    <p class="fader2">Ranging from classic country legend <em>Johnny Cash</em> to pop country hit
-                        <em>Luke Bryan</em>, country
-                        music casts a wide net. Still, it's sound is unique to the United States. A bubble that doesn't
-                        stand out in the presence of
-                        <em>Taylor Swift</em> and <em>Elvis Presley</em> is renowned artist <em> Dolly Parton</em>.</p>
-                </div>
-                <div style="height: 60vh" id="bubble-second-text">
-                    <p class="fader2">Despite her comparatively small impact on the Billboards, she is famous for
-                        more than her solo music career.
-                        Out of these major players on the Billboards, she has collaborated with 14 of them. Taylor Swift
-                        has
-                        stated she would not be where she was without Dolly's influence.
-                        be higher, as many people wanted to record
-                        the infamous song eventually performed by <em>Whitney Huston</em>, <em>I Will Always Love
-                            You</em>. <em>Elvis Presley</em> was one of them.
-                    </p>
-                </div>
+    <!-- Anything relating to the (1ST STATIC VIEW) country bubble visualization would go in this row -->
+    <!-- Title for the country bubble visualization will be to the left of an external legend -->
+    <div class="row">
+        <div class="col-4">
+            <div class="big-gutter"></div>
+
+            <div style="height: 50vh" id="bubble-first-text">
+                <p class="fader2">Ranging from classic country legend <em>Johnny Cash</em> to pop country hit
+                    <em>Luke Bryan</em>, country
+                    music casts a wide net. Still, it's sound is unique to the United States. A bubble that doesn't
+                    stand out in the presence of
+                    <em>Taylor Swift</em> and <em>Elvis Presley</em> is renowned artist <em> Dolly Parton</em>.</p>
             </div>
-
-            <div class="col-8">
-                <!-- old title and legend container, now moved -->
-
-
-                <div class="row">
-                    <div class="col" style="height: 120vh; width: 100%;">
-                        <div class="col bubble-vis fader8" id="vis-1a"
-                             style="height: 80vh; width: 100%; position: sticky; top: 0">
-                            <!-- Bubble SVG should go right where this is -->
-                        </div>
-                    </div>
-                </div>
+            <div style="height: 60vh" id="bubble-second-text">
+                <p class="fader2">Despite her comparatively small impact on the Billboards, she is famous for
+                    more than her solo music career.
+                    Out of these major players on the Billboards, she has collaborated with 14 of them. Taylor Swift
+                    has
+                    stated she would not be where she was without Dolly's influence.
+                    be higher, as many people wanted to record
+                    the infamous song eventually performed by <em>Whitney Huston</em>, <em>I Will Always Love
+                        You</em>. <em>Elvis Presley</em> was one of them.
+                </p>
             </div>
         </div>
-        <div class="gutter"></div>
+
+        <div class="col-8" style="height: 120vh">
+            <div class="bubble-vis fader8" id="vis-1a" style="height: 80vh; width: 100%; position: sticky; top: 0">
+                <!-- Bubble SVG should go right where this is -->
+            </div>
+        </div>
     </div>
+    <div class="row">
+        <div class="col-12">
+            <div class="gutter"></div>
+        </div>
+    </div>
+</div>
 
 
 
