correct row/column nesting for recognition vis

--- a/index.html
+++ b/index.html
@@ -330,34 +330,34 @@
             <div class="row"><div class="col-12" id="leadstreams"></div></div>
             <div class="row">
                 <div class="col-12">
-                <h2 class="title">Total Streams</h2>
+                    <h2 class="title">Total Streams</h2>
+                </div>
             </div>
-        </div>
         </div>
         <div class="col-3" id="metric2">
             <div class="row"><div class="col-12" id="featsrecord"></div></div>
             <div class="row"><div class="col-12" id="feats"></div></div>
             <div class="row">
                 <div class="col-12">
-                <h2 class="title">Features</h2>
+                    <h2 class="title">Features</h2>
+                </div>
             </div>
-        </div>
         </div>
         <div class="col-3" id="metric3">
             <div class="row"><div class="col-12" id="tracksrecord"></div></div>
             <div class="row"><div class="col-12" id="tracks"></div></div>
             <div class="row">
                 <div class="col-12">
-                <h2 class="title">Tracks</h2>
+                    <h2 class="title">Tracks</h2>
+                </div>
             </div>
-        </div>
         </div>
         <div class="col-3" id="metric4">
             <div class="row"><div class="col-12" id="onemillrecord"></div></div>
             <div class="row"><div class="col-12" id="onemill"></div></div>
             <div class="row">
                 <div class="col-12">
-                <h2 class="title">One Million Streams</h2>
+                    <h2 class="title">One Million Streams</h2>
                 </div>
             </div>
         </div>
@@ -387,34 +387,44 @@
 
 <a id="recognition"></a>
 <div class="container-fluid" id="module-3">
-    <div class="gutter"></div>
-    <div class="gutter"></div>
+    <div class="row">
+        <div class="col-12">
+            <div class="gutter"></div>
+            <div class="gutter"></div>
+        </div>
+    </div>
     <div class="row">
         <!-- Awards vis -->
         <div class="col-8" style="height: 80vh; width: 100%; position: sticky; top: 0">
-            <div class="row" id= "vis-3-title">
-                <h3 class="title fader3">Music, Acting, Composition, Achievements, and
+            <div class="row">
+                <div class="col-12" id="vis-3-title">
+                    <h3 class="title fader3">Music, Acting, Composition, Achievements, and
                     Service</h3>
+                </div>
             </div>
 
-            <div class="row" id="vis-3-legend">
-                <!-- Outsource award legend -->
+            <div class="row">
+                <div class="col-12" id="vis-3-legend">
+                    <!-- Outsource award legend -->
+                </div>
             </div>
 
-            <div class="row fader4" id="vis-3">
-                <!-- Awards matrix vis -->
+            <div class="row">
+                <div class="col-12 fader4" id="vis-3">
+                    <!-- Awards matrix vis -->
+                </div>
             </div>
         </div>        
 
         <!-- Right of the vis -->
         <div class="col-4">
             <div class="row" style="position: sticky; top: 0; background-color: black">
-                <div class="col">
+                <div class="col-6">
                     <h1 class="title numeric" id="won-numeric"></h1>
                     <h4 class="title"><em>Won</em></h4>
 
                 </div>
-                <div class="col">
+                <div class="col-6">
                     <h1 class="title numeric" id="nominated-numeric"></h1>
                     <h4 class="title"><em>Nominated</em></h4>
                 </div>
