finally make the horizontal scrollbar disappear

--- a/index.html
+++ b/index.html
@@ -286,8 +286,9 @@
     </div>
 
     <div class="row">
-        <div class="col-12" id="vis-2" style="height: 60vh; width:100%;">
+        <div class="col-12">
             <!-- Cell with the timeline vis -->
+            <div id="vis-2" style="height: 60vh; width:100%;"></div>
         </div>
     </div>
     <div class="row">
@@ -325,39 +326,39 @@
 
 <div class="container-fluid fader3" id="spotifystats">
     <div class="row">
-        <div class="col-3" id="metric1">
+        <div class="col-3">
             <div class="row"><div class="col-12" id="leadrecord"></div></div>
             <div class="row"><div class="col-12" id="leadstreams"></div></div>
             <div class="row">
                 <div class="col-12">
-                    <h2 class="title">Total Streams</h2>
+                    <h2 class="title" id="metric1">Total Streams</h2>
                 </div>
             </div>
         </div>
-        <div class="col-3" id="metric2">
+        <div class="col-3">
             <div class="row"><div class="col-12" id="featsrecord"></div></div>
             <div class="row"><div class="col-12" id="feats"></div></div>
             <div class="row">
                 <div class="col-12">
-                    <h2 class="title">Features</h2>
+                    <h2 class="title" id="metric2">Features</h2>
                 </div>
             </div>
         </div>
-        <div class="col-3" id="metric3">
+        <div class="col-3">
             <div class="row"><div class="col-12" id="tracksrecord"></div></div>
             <div class="row"><div class="col-12" id="tracks"></div></div>
             <div class="row">
                 <div class="col-12">
-                    <h2 class="title">Tracks</h2>
+                    <h2 class="title" id="metric3">Tracks</h2>
                 </div>
             </div>
         </div>
-        <div class="col-3" id="metric4">
+        <div class="col-3">
             <div class="row"><div class="col-12" id="onemillrecord"></div></div>
             <div class="row"><div class="col-12" id="onemill"></div></div>
             <div class="row">
                 <div class="col-12">
-                    <h2 class="title">One Million Streams</h2>
+                    <h2 class="title" id="metric4">One Million Streams</h2>
                 </div>
             </div>
         </div>
