correct row/column nesting for charitypics

--- a/index.html
+++ b/index.html
@@ -646,14 +646,7 @@
                 into Dollywood over the years is not known</em></p>
         </div>
 
-
         <div class="col-8" style="display: flex; flex-direction: column; height: 100vh">
-            <div class="row" style="flex: 0 0 auto">
-                <div class="col" id="vis-4-title">
-                    <h3 class="vis-title title"></h3>
-                </div>
-            </div>
-
             <div class="row" style="flex: auto; min-height: 80vh">
                 <div class="col charity-vis fader8" id="vis-4" style="height:100%"></div>
                 <!-- Map / Bubbles / whatever visualization we pick of her charitable impact -->
@@ -662,24 +655,23 @@
     </div>
 </div>
 
-<div class="row fader6" id="charitypics">
-    <div class="col-4">
-         <img src ="img/dollyvaxwide.webp" >
-    <p><br><br>Dolly receiving the vaccine she helped fund</p>
+<div class="container-fluid module" id="charitypics">
+    <div class="row fader6">
+        <div class="col-4">
+            <img src ="img/dollyvaxwide.webp" >
+            <p><br><br>Dolly receiving the vaccine she helped fund</p>
+        </div>
+
+        <div class="col-4">
+            <img src ="img/dollywood.jpeg" >
+            <p><br><br>Dolly at the early days of Dollywood</p>
+        </div>
+
+        <div class="col-4">
+            <img src ="img/dollyreading.jpeg" >
+            <p><br><br>Dolly hosting a story hour to celebrate the donation of the 100 millionth book</p>
+        </div>
     </div>
-
-<div class="col-4">
-<img src ="img/dollywood.jpeg" >
-<p><br><br>Dolly at the early days of Dollywood</p>
-</div>
-
-    <div class="col-4">
-        <img src ="img/dollyreading.jpeg" >
-        <p><br><br>Dolly hosting a story hour to celebrate the donation of the 100 millionth book</p>
-    </div>
-
-
-
 </div>
 
 
